Fix color contrast

--- a/style.css
+++ b/style.css
@@ -472,7 +472,7 @@ h3 {
   }
 
   #contact-section p {
-    /* font-weight: bold; */
+    font-weight: bold;
     font-size: 22px;
     width: 600px;
   }
